--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -508,6 +508,12 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <groupId>io.jenkins.plugins</groupId>
+      <artifactId>autograding</artifactId>
+      <version>1.1.1-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
 
   </dependencies>
 
