--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -511,7 +511,7 @@
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>autograding</artifactId>
-      <version>1.1.1-SNAPSHOT</version>
+      <version>1.1.0</version>
       <scope>test</scope>
     </dependency>
 
