--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -1,11 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.jvnet.hudson.plugins</groupId>
     <artifactId>analysis-pom</artifactId>
     <version>4.0.0</version>
-    <relativePath />
+    <relativePath/>
   </parent>
 
   <groupId>io.jenkins.plugins</groupId>
@@ -72,8 +73,6 @@
     <configuration-as-code.version>1.36</configuration-as-code.version>
     <job-dsl.version>1.76</job-dsl.version>
     <envinject.version>2.1.6</envinject.version>
-<!--    <parasoft.version>10.4.4</parasoft.version>-->
-<!--    <xtest.version>10.2.2.20160315</xtest.version>-->
     <flexible-publish.version>0.15.2</flexible-publish.version>
     <pipeline-stage-step.version>2.3</pipeline-stage-step.version>
     <docker-fixtures.version>1.10</docker-fixtures.version>
@@ -442,13 +441,6 @@
       <version>0.4.3</version>
       <scope>test</scope>
     </dependency>
-
-    <!--    <dependency>-->
-<!--      <groupId>com.parasoft</groupId>-->
-<!--      <artifactId>parasoft-findings</artifactId>-->
-<!--      <version>${parasoft.version}</version>-->
-<!--      <scope>test</scope>-->
-<!--    </dependency>-->
 
     <!-- stage -->
     <dependency>
