--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -20,13 +20,14 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
     <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+    <analysis-model-tests.version>8.1.0</analysis-model-tests.version>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.jenkins-ci</groupId>
       <artifactId>acceptance-test-harness</artifactId>
-      <version>1.71</version>
+      <version>1.72</version>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
@@ -39,6 +40,12 @@
       <artifactId>junit-vintage-engine</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>edu.hm.hafner</groupId>
+      <artifactId>analysis-model</artifactId>
+      <version>${analysis-model-tests.version}</version>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 
