add TrendChartsTable and TrendChartsUITest, WIP

--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -40,6 +40,12 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.jenkins.plugins</groupId>
+      <artifactId>warnings-ng</artifactId>
+      <version>8.2.0-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <repositories>
