--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -379,8 +379,8 @@
     </dependency>
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
-      <artifactId>metrics-aggregation-shaded-pmd</artifactId>
-      <version>6.21.0-3</version>
+      <artifactId>metrics-aggregation</artifactId>
+      <version>0.2.0</version>
       <scope>test</scope>
     </dependency>
 
