--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -29,8 +29,8 @@
 
     <analysis-model-api.version>8.1.3</analysis-model-api.version>
     <analysis-model-tests.version>8.1.3</analysis-model-tests.version>
-    <forensics-api-plugin.version>0.7.0</forensics-api-plugin.version>
-    <git-forensics-plugin.version>0.7.0</git-forensics-plugin.version>
+    <forensics-api-plugin.version>0.21.0-alpha-rc534.447d402c1334</forensics-api-plugin.version>
+    <git-forensics-plugin.version>0.21.0-alpha-SNAPSHOT-rc474.6bf7b4427515</git-forensics-plugin.version>
     <plugin-util-api.version>1.2.2</plugin-util-api.version>
 
     <font-awesome-api.version>5.13.0-1</font-awesome-api.version>
