Move pipeline and freestyle test to new SmokeTests class.
Smoke tests will be invoked during PR testing. All other
tests need to be started manually.

--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -110,6 +110,9 @@
             <LOCAL_JARS>../plugin/target/warnings-ng.hpi</LOCAL_JARS>
             <BROWSER>firefox</BROWSER>
           </environmentVariables>
+          <includes>
+            <include>**/SmokeTests.java</include>
+          </includes>
         </configuration>
       </plugin>
       <plugin>
