--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -20,6 +20,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
     <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+    <json-smart.version>2.3</json-smart.version>
   </properties>
 
   <dependencies>
@@ -40,6 +41,11 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    <groupId>net.minidev</groupId>
+    <artifactId>json-smart</artifactId>
+    <version>${json-smart.version}</version>
+  </dependency>
   </dependencies>
 
   <repositories>
