--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -46,6 +46,18 @@
     <artifactId>json-smart</artifactId>
     <version>${json-smart.version}</version>
   </dependency>
+    <dependency>
+      <groupId>net.javacrumbs.json-unit</groupId>
+      <artifactId>json-unit-assertj</artifactId>
+      <version>2.17.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.javacrumbs.json-unit</groupId>
+      <artifactId>json-unit-json-path</artifactId>
+      <version>2.18.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <repositories>
