Modify Benchmark Tests to run without Jenkins Runtime

--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -57,6 +57,7 @@
     <jsoup.version>1.13.1</jsoup.version>
     <json-smart.version>2.3</json-smart.version>
     <git-client.version>3.2.1</git-client.version>
+    <jmh.version>1.23</jmh.version>
 
     <!-- Jenkins Plug-in Dependencies Versions -->
     <token-macro.version>2.10</token-macro.version>
@@ -533,6 +534,18 @@
       </exclusions>
     </dependency>
 
+      <!-- JMH Benchmark -->
+      <dependency>
+        <groupId>org.openjdk.jmh</groupId>
+        <artifactId>jmh-core</artifactId>
+        <version>${jmh.version}</version>
+      </dependency>
+    <dependency>
+      <groupId>org.openjdk.jmh</groupId>
+      <artifactId>jmh-generator-annprocess</artifactId>
+      <version>${jmh.version}</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
