--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -27,3 +27,4 @@ jobs:
         uses: codecov/codecov-action@v1.0.7
         with:
           token: ${{secrets.CODECOV_TOKEN}}
+          file: ./plugin/target/site/jacoco/jacoco.xml
