--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -81,9 +81,12 @@
     <form-element-path.version>1.8</form-element-path.version>
     <folder.version>6.9</folder.version>
     <scm-api.version>2.6.3</scm-api.version>
+    <github-checks.version>0.1.0-rc139.bc6d314165d6</github-checks.version>
 
     <!-- Maven Surefire ArgLine -->
     <argLine>-Djava.awt.headless=true -Xmx1024m</argLine>
+
+    <useBeta>true</useBeta>
   </properties>
 
   <licenses>
@@ -283,6 +286,11 @@
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>antisamy-markup-formatter</artifactId>
       <version>${antisamy-markup-formatter.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.jenkins.plugins</groupId>
+      <artifactId>github-checks</artifactId>
+      <version>${github-checks.version}</version>
     </dependency>
 
     <!-- AxivionSuite Dependencies -->
