Tweak checks configuration

--- a/plugin/src/main/resources/issues/checks-parameters.properties
+++ b/plugin/src/main/resources/issues/checks-parameters.properties
@@ -1,2 +1,2 @@
-title.checksPublishingDisabled=Disable Checks Publishing
-description.checksPublishingDisabled=If checked, then warnings will not be published to SCM platforms.
+title.publishChecks=Publish Checks
+description.publishChecks=If checked, then warnings will be published to SCM platforms.
