--- a/plugin/src/test/resources/io/jenkins/plugins/analysis/warnings/integrations/job-dsl-warnings-ng.yaml
+++ b/plugin/src/test/resources/io/jenkins/plugins/analysis/warnings/integrations/job-dsl-warnings-ng.yaml
@@ -11,6 +11,7 @@ jobs:
                     healthy(10)
                     ignoreFailedBuilds(false)
                     ignoreQualityGate(true)
+                    publishChecks(false)
                     id('test-id')
                     name('test-name')
                     minimumSeverity('ERROR')
