--- a/plugin/src/main/resources/issues/checks-parameters.properties
+++ b/plugin/src/main/resources/issues/checks-parameters.properties
@@ -1,2 +1,2 @@
-title.publishChecks=Publish Checks
-description.publishChecks=If checked, then warnings will be published to SCM platforms.
+title.skipPublishingChecks=Skip Publishing Checks
+description.skipPublishingChecks=If unchecked, then warnings will be published to SCM platforms.
