--- a/plugin/src/test/resources/io/jenkins/plugins/analysis/warnings/integrations/job-dsl-warnings-ng.yaml
+++ b/plugin/src/test/resources/io/jenkins/plugins/analysis/warnings/integrations/job-dsl-warnings-ng.yaml
@@ -11,7 +11,7 @@ jobs:
                     healthy(10)
                     ignoreFailedBuilds(false)
                     ignoreQualityGate(true)
-                    publishChecks(false)
+                    skipPublishingChecks(true)
                     id('test-id')
                     name('test-name')
                     minimumSeverity('ERROR')
