--- a/plugin/src/main/resources/issues/publish-parameters.properties
+++ b/plugin/src/main/resources/issues/publish-parameters.properties
@@ -20,3 +20,6 @@ qualityGates.description=You can define an arbitrary number of quality gates tha
   If a quality gate is not passed then the build can be set to unstable or failed, respectively.
 title.trendChartType=Trend chart type
 description.trendChartType=Select trend charts and their position.
+
+title.skipPublishingChecks=Skip Publishing Checks
+description.skipPublishingChecks=If unchecked, then issues will be published to SCM provider platforms.
