--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -80,7 +80,7 @@
     <workflow-support.version>3.3</workflow-support.version>
     <pipeline-model-definition.version>1.2</pipeline-model-definition.version>
     <form-element-path.version>1.8</form-element-path.version>
-    <folder.version>6.9</folder.version>
+    <folder.version>6.12</folder.version>
     <scm-api.version>2.6.3</scm-api.version>
     <checks-api.version>0.1.0</checks-api.version>
 
@@ -131,6 +131,11 @@
         <groupId>io.jenkins.plugins</groupId>
         <artifactId>code-coverage-api</artifactId>
         <version>1.2.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jenkins-ci.plugins</groupId>
+        <artifactId>branch-api</artifactId>
+        <version>2.5.6</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
