Use dependencies of the test harness for PLUGINS_DIR of ATH.

--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -118,7 +118,7 @@
         <configuration>
           <reuseForks>false</reuseForks>
           <environmentVariables>
-            <PLUGINS_DIR>../../docker/volumes/jenkins-home/plugins</PLUGINS_DIR>
+            <PLUGINS_DIR>../plugin/target/test-classes/test-dependencies</PLUGINS_DIR>
             <JENKINS_VERSION>${jenkins.version}</JENKINS_VERSION>
             <LOCAL_JARS>../plugin/target/warnings-ng.hpi</LOCAL_JARS>
             <BROWSER>firefox</BROWSER>
