--- a/plugin/src/main/resources/issues/publish-parameters.properties
+++ b/plugin/src/main/resources/issues/publish-parameters.properties
@@ -3,8 +3,8 @@ description.reference=One important feature of the Warnings Plugin is the classi
   New, fixed, and outstanding issues are then computed by comparing the issues in the current build and in the baseline.
 title.referenceJob=Reference Job
 description.referenceJob=The reference job provides the builds that can be selected as baseline.
-title.referenceBuildSelectionStrategy=Reference Build Selection Strategy
-description.referenceBuildSelectionStrategy=Select the strategy for finding the reference build baseline
+title.useReferenceBuildFinderResult=Use the reference build finder result
+description.useReferenceBuildFinderResult=If checked, the reference build finder result will be selected as the baseline.
 title.ignoreQualityGate=Ignore Quality Gate
 description.ignoreQualityGate=If checked, then the last finished build of the reference job will be used as baseline \
   no matter if the quality gate of that build has been passed or not.
