--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,5 +1,5 @@
-tag-template: warnings-ng-plugin-$NEXT_PATCH_VERSION
-name-template: Warnings NG Plugin $NEXT_PATCH_VERSION 🎁
+name-template: 'v$RESOLVED_VERSION 🎁'
+tag-template: 'v$RESOLVED_VERSION'
 
 template: |
   $CHANGES
@@ -32,6 +32,23 @@ categories:
     labels:
       - test
       - tests
+
+version-resolver:
+  major:
+    labels:
+      - 'removed'
+  minor:
+    labels:
+      - 'feature'
+      - 'enhancement'
+      - 'deprecated'
+  patch:
+    labels:
+      - 'dependencies'
+      - 'documentation'
+      - 'tests'
+      - 'internal'
+  default: minor
 
 replacers:
   - search: '/\[*JENKINS-(\d+)\]*\s*-*\s*/g'
