--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -29,7 +29,6 @@
     <analysis-model-api.version>8.3.1</analysis-model-api.version>
     <analysis-model-tests.version>${analysis-model-api.version}</analysis-model-tests.version>
     <forensics-api-plugin.version>0.8.0-rc613.886cb1cc8afe</forensics-api-plugin.version>
-    <git-forensics-plugin.version>0.7.0</git-forensics-plugin.version>
     <plugin-util-api.version>1.2.5</plugin-util-api.version>
 
     <font-awesome-api.version>5.14.0-1</font-awesome-api.version>
@@ -55,7 +54,6 @@
     <xmlunit.version>2.7.0</xmlunit.version>
     <jsoup.version>1.13.1</jsoup.version>
     <json-smart.version>2.3</json-smart.version>
-    <git-client.version>3.4.2</git-client.version>
     <jmh.version>1.25.2</jmh.version>
 
     <!-- Jenkins Plug-in Dependencies Versions -->
@@ -63,7 +61,6 @@
     <jenkins-maven-plugin.version>3.1.2</jenkins-maven-plugin.version>
     <matrix-project.version>1.14</matrix-project.version>
     <junit-plugin.version>1.24</junit-plugin.version>
-    <git-plugin.version>4.4.1</git-plugin.version>
     <structs.version>1.20</structs.version>
     <antisamy-markup-formatter.version>2.1</antisamy-markup-formatter.version>
     <dashboard-view.version>2.9.4</dashboard-view.version>
@@ -106,16 +103,6 @@
 
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>org.jenkins-ci.plugins</groupId>
-        <artifactId>git-client</artifactId>
-        <version>${git-client.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jenkins-ci.plugins</groupId>
-        <artifactId>git</artifactId>
-        <version>${git-plugin.version}</version>
-      </dependency>
       <dependency>
         <groupId>org.codehaus.groovy</groupId>
         <artifactId>groovy-all</artifactId>
@@ -348,12 +335,6 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>io.jenkins.plugins</groupId>
-      <artifactId>git-forensics</artifactId>
-      <version>${git-forensics-plugin.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>edu.hm.hafner</groupId>
       <artifactId>analysis-model</artifactId>
       <version>${analysis-model-tests.version}</version>
@@ -506,15 +487,6 @@
       <version>${jdk-tool.version}</version>
       <scope>test</scope>
     </dependency>
-
-    <!-- GitSampleRepoRule -->
-    <dependency>
-      <groupId>org.jenkins-ci.plugins</groupId>
-      <artifactId>git</artifactId>
-      <version>${git-plugin.version}</version>
-      <scope>test</scope>
-      <type>test-jar</type>
-    </dependency>
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>scm-api</artifactId>
@@ -625,17 +597,19 @@
               <item>
                 <code>java.annotation.added</code>
                 <annotationType>org.jenkinsci.plugins.scriptsecurity.sandbox.whitelists.Whitelisted</annotationType>
-                <justification>Annotation should be save to add.</justification>
+                <justification>Whitelisted annotations are save to add.</justification>
               </item>
               <item>
                 <code>java.annotation.removed</code>
-                <annotation>@edu.umd.cs.findbugs.annotations.Nullable</annotation>
-                <justification>Annotation should be save to change.</justification>
+                <regex>true</regex>
+                <annotation>@edu.umd.cs.findbugs.annotations.*</annotation>
+                <justification>SpotBugs annotations are save to change.</justification>
               </item>
               <item>
                 <code>java.annotation.added</code>
-                <annotation>@edu.umd.cs.findbugs.annotations.CheckForNull</annotation>
-                <justification>Annotation should be save to change.</justification>
+                <regex>true</regex>
+                <annotation>@edu.umd.cs.findbugs.annotations.*</annotation>
+                <justification>SpotBugs annotations are save to change.</justification>
               </item>
             </revapi.ignore>
           </analysisConfiguration>
