--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jvnet.hudson.plugins</groupId>
     <artifactId>analysis-pom</artifactId>
-    <version>4.0.0</version>
+    <version>4.2.1</version>
     <relativePath />
   </parent>
 
@@ -12,7 +12,7 @@
   <artifactId>warnings-ng</artifactId>
   <packaging>hpi</packaging>
   <name>Warnings Next Generation Plugin</name>
-  <version>8.4.1</version>
+  <version>${revision}${changelist}</version>
 
   <description>Jenkins Warnings Next Generation plugin collects compiler warnings or issues reported by static
     analysis tools and visualizes the results. It has built-in support for numerous static analysis tools
@@ -21,7 +21,7 @@
   <url>https://github.com/jenkinsci/warnings-ng-plugin</url>
 
   <properties>
-    <revision>8.4.1</revision>
+    <revision>8.4.2</revision>
     <changelist>-SNAPSHOT</changelist>
 
     <module.name>${project.groupId}.warnings.ng</module.name>
@@ -33,9 +33,9 @@
     <git-forensics-plugin.version>0.7.0</git-forensics-plugin.version>
     <plugin-util-api.version>1.2.5</plugin-util-api.version>
 
-    <font-awesome-api.version>5.13.0-1</font-awesome-api.version>
+    <font-awesome-api.version>5.14.0-1</font-awesome-api.version>
     <jquery3-api.version>3.5.1-1</jquery3-api.version>
-    <bootstrap4-api.version>4.5.0-2</bootstrap4-api.version>
+    <bootstrap4-api.version>4.5.2-1</bootstrap4-api.version>
     <data-tables-api.version>1.10.21-2</data-tables-api.version>
     <echarts-api.version>4.8.0-2</echarts-api.version>
 
