--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -81,7 +81,7 @@
     <checks-api.version>1.0.0</checks-api.version>
 
     <!-- Maven Surefire ArgLine -->
-    <argLine>-Djava.awt.headless=true -Xmx1024m</argLine>
+    <argLine>-Djava.awt.headless=true -Xmx1024m -Djenkins.test.timeout=240</argLine>
 
     <useBeta>true</useBeta>
   </properties>
