--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -60,7 +60,7 @@
     <token-macro.version>2.12</token-macro.version>
     <jenkins-maven-plugin.version>3.7</jenkins-maven-plugin.version>
     <matrix-project.version>1.17</matrix-project.version>
-    <junit-plugin.version>1.24</junit-plugin.version>
+    <junit-plugin.version>1.35</junit-plugin.version>
     <structs.version>1.20</structs.version>
     <antisamy-markup-formatter.version>2.1</antisamy-markup-formatter.version>
     <dashboard-view.version>2.13</dashboard-view.version>
@@ -122,6 +122,11 @@
         <groupId>edu.hm.hafner</groupId>
         <artifactId>codingstyle</artifactId>
         <version>1.6.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jenkins-ci.plugins</groupId>
+        <artifactId>junit</artifactId>
+        <version>1.35</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
