--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -655,7 +655,7 @@
     <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
-    <tag>v8.4.3</tag>
+    <tag>${scmTag}</tag>
   </scm>
 
   <repositories>
