--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -121,7 +121,12 @@
       <dependency>
         <groupId>edu.hm.hafner</groupId>
         <artifactId>codingstyle</artifactId>
-        <version>1.5.0</version>
+        <version>1.6.0</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.8.0</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
